# rust-zip-structs

./: Cargo.toml
src/: lib.rs  read_ext.rs  zip_central_directory.rs  zip_eocd.rs  zip_error.rs  zip_local_file_header.rs
tests/: decryp_test.rs  direct_read_structures_test.rs  zip_read_test.rs
