[package]
name = "zip_structs"
version = "0.1.1"
authors = ["Tatsunori Uchino <tats.u@live.jp>"]
edition = "2018"
license = "MIT"
description = "ZIP archives structures handling library"
repository = "https://github.com/tats-u/rust-zip-structs/"
readme = "README.md"
categories = ["parsing", "filesystem"]
keywords = ["zip", "archive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib","lib"]

[dependencies]

byteorder = {git = "https://github.com/jredrado/byteorder.git", default-features=false, branch="update-to-core2", package="byteorder_bare-io"}
core2 = { git = "https://github.com/bbqsrc/core2", branch = "main", default-features=false, features=["alloc"]}

authallocator = {path ="../urschain/src/authallocator", version = "0.1.0", optional = true}

compression = {version="0.1.5", default-features=false,features=["deflate"]}

[features]
default = ["allocator"]
allocator = ["authallocator"]


